--- a/style.css
+++ b/style.css
@@ -16,9 +16,15 @@
 }
 
 /* body */
+body{
+    background: var(--bg-color1);
+    color: var(--text-color);
+
+}
+/* home */
 .body {
-  position: relative;
-  width: 100%;
+  /* position: relative; */
+  width: 100vw;
   height: 100vh;
   padding: 15px 0;
   display: flex;
@@ -41,7 +47,7 @@
   background-color: #4ad0ee1b;
   backdrop-filter: blur(10px);
   border-radius: 50px;
-  box-shadow: 5px 5px 20px 1px #4acfee;
+  box-shadow: 5px 5px 20px 1px var(--main-color);
 }
 
 .header {
@@ -50,13 +56,13 @@
   align-items: center;
   width: 100%;
   padding: 40px 5%;
-  font-size: 20px;
-  z-index: 100;
+  font-size: 1.25rem;
+  z-index: 1000;
 }
 
 .header .logo {
   color: rgb(64, 64, 243);
-  font-size: 30px;
+  font-size: 1.875rem;
   font-weight: 900;
 }
 
@@ -67,17 +73,16 @@
 .navbar a {
   margin-left: 35px;
   border-bottom: 2px solid transparent;
-  text-decoration: none;
-  font-size: 20px;
-  color: #fff;
+  font-size: 1.25rem;
+  color: var(--text-color);
   transition: .5s;
   font-weight: bold;
 }
 
 .navbar a:hover,
 a.active {
-  color: #0ef;
-  border-color: #4acfee;
+  color: var(--second-main-color);
+  border-color: var(--main-color);
 }
 
 /* home-content  & image*/
@@ -86,38 +91,26 @@ a.active {
   align-items: center;
   height: 70%;
   padding: 0 8%;
-  color: white;
   justify-content: space-between;
 }
 
 h1 {
-  background: linear-gradient(to right, #4acfee, #53f8c9, #6070fd, #5bbdff, #4acfee);
-  background-size: 200%;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: animate-gradient 2.5s linear infinite;
-}
-
-@keyframes animate-gradient {
-  to {
-    background-position: 200%;
-  }
+  color: var(--second-main-color);
 }
 
 .hero h1 {
-  font-size: 50px;
+  font-size: 3.125rem;
 }
 
 .hero h2 {
   margin: 8px 0;
-  font-size: 28px;
+  font-size: 1.75rem;
   text-transform: uppercase;
 }
 
 .hero p {
   max-width: 450px;
-  font-size: 16px;
+  font-size: 1rem;
   margin-bottom: 20px;
 }
 
@@ -129,10 +122,10 @@ h1 {
   display: inline-block;
   padding: 12px 35px;
   border-radius: 12px;
-  background-color: #4acfee;
-  border: 2px solid #4acfee;
-  box-shadow: 0 0 10px #4acfee;
-  font-size: 16px;
+  background-color: var(--main-color);
+  border: 2px solid var(--main-color);
+  box-shadow: 0 0 10px var(--main-color);
+  font-size: 1rem;
   font-weight: 700;
   color: #0e1217;
   cursor: pointer;
@@ -142,35 +135,34 @@ h1 {
 
 .btn:hover {
   background-color: transparent;
-  color: #4acfee;
+  color: var(--main-color);
   box-shadow: none;
 }
 
 .btn:nth-child(2) {
   background: transparent;
-  color: #4acfee;
+  color: var(--main-color);
 }
 
 .btn:hover:nth-child(2) {
-  background-color: #4acfee;
+  background-color: var(--main-color);
   color: #0e1217;
 }
 
 .hero-img {
   width: 400px;
   height: 400px;
-  background-color: none;
   position: relative;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   overflow: hidden;
-  box-shadow: 0 0 10px #4acfee;
+  box-shadow: 0 0 10px var(--main-color);
   transition: 0.5s;
 }
 
 .hero-img:hover {
-  box-shadow: 0 0 25px #4acfee;
+  box-shadow: 0 0 25px var(--main-color);
 }
 
 .hero-img img {
@@ -181,7 +173,6 @@ h1 {
 
 /* home info */
 .info-section {
-  color: white;
   display: flex;
   width: 100%;
   gap: 20px;
@@ -198,15 +189,14 @@ h1 {
 }
 
 .info-section h1 {
-  font-size: 55px;
+  font-size: 3.438rem;
   text-transform: uppercase;
-
   margin-right: 10px;
 }
 
 .info-section p {
-  color: white;
-  font-size: 20px;
+  font-size: 1.25rem;
+  font-weight: 600;
 }
 
 /* about section */
@@ -215,8 +205,7 @@ section {
 }
 
 .about-section {
-  background: #081b29;
-  color: #fff;
+  background: var(--second-bg-color);
   width: 100%;
   height: 80vh;
   display: flex;
@@ -227,9 +216,8 @@ section {
 .about-img img {
   width: 100%;
   height: 50vh;
-  border: 2px solid #4acfee;
+  border: 2px solid var(--main-color);
   border-radius: 50%;
-  /* background-color: var(--second-main-color); */
 }
 
 .about-text h2 {
@@ -239,35 +227,29 @@ section {
 }
 
 .about-text h4 {
-  font-size: 22px;
+  font-size: 1.375rem;
   font-weight: 600;
   word-spacing: 5px;
 }
 
 .about-text h4 span {
-  color: #0ef;
+  color: var(--second-main-color);
 }
 
 .about-text p {
   margin: 20px 0 30px;
   width: 100%;
   max-width: 550px;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 35px;
   color: #c2bfd1;
 }
 
 /* skills section */
-.skills {
-  background: #090516;
-  color: #fff;
-  height: 900px;
-}
 
 .middle-text {
   text-align: center;
-  color: #fff;
   margin-bottom: 40px;
 }
 
@@ -279,7 +261,7 @@ section {
 .col {
   width: 28vw;
   padding: 50px 50px 60px;
-  background: #081b29;
+  background: var(--second-bg-color);
   border-radius: 30px;
   border: 2px solid transparent;
   transition: all .50s ease;
@@ -290,7 +272,7 @@ section {
 .col h3 {
   font-size: 3rem;
   font-weight: 700;
-  color: #0ef;
+  color: var(--second-main-color);
   margin-bottom: 15px;
 }
 
@@ -301,7 +283,7 @@ section {
 }
 
 .col p {
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 400;
   margin-bottom: 25px;
 }
@@ -309,8 +291,8 @@ section {
 .s-btnn {
   display: inline-block;
   padding: 11px 22px;
-  color: #fff;
-  background: #4acfee;
+  color: var(--text-color);
+  background: var(--main-color);
   border-radius: 30px;
   font-size: 15px;
   font-weight: 500;
@@ -323,7 +305,7 @@ section {
 
 .col:hover {
   transform: scale(1.05) translateY(-5px);
-  border: 2px solid #0ef;
+  border: 2px solid var(--second-main-color);
   cursor: pointer;
 }
 
@@ -356,7 +338,7 @@ section {
 
 /* Project section */
 .projects {
-  background: #081b29;
+  background: var(--second-bg-color);
 }
 
 .project-card {
@@ -370,24 +352,22 @@ section {
   height: 500px;
   background: url("Screenshot (7).png");
   background-size: cover;
-  border: 2px solid #4acfee;
+  border: 2px solid var(--main-color);
   transition: all .50s ease;
 }
 
 .card2 {
   background: url("Screenshot (10).png");
+  background-repeat: no-repeat;
 }
 
 .card:hover {
-  width: 50%;
-  border: 3px solid #0ef;
+  width: 45%;
+  border: 3px solid var(--second-main-color);
   transform: scale(1.05);
 }
 
 /* contact section */
-.contact {
-  background: #333;
-}
 
 .contactdiv {
   display: flex;
@@ -400,27 +380,26 @@ section {
   font-size: 3.6rem;
   font-weight: 700;
   margin-bottom: 50px;
-  color: #fff;
 }
 
 .contact-text h3 {
   font-size: 2.8rem;
   font-weight: 600;
   margin-bottom: 50px;
-  color: #4acfee;
+  color: var(--main-color);
 }
 
 .contact-icons i {
   display: inline-block;
   font-size: 25px;
-  color: #0ef;
+  color: var(--second-main-color);
   margin-right: 20px;
   transition: all .50s ease;
 }
 
 .contact-icons i:hover {
   transform: translateY(-5px);
-  color: #fff;
+  color: var(--text-color);
 }
 
 .contact-form form {
@@ -433,8 +412,7 @@ form textarea {
   border: none;
   outline: none;
   padding: 18px;
-  background: #081b29;
-  color: #c2bfd1;
+  background: var(--second-bg-color);
   font-size: 1.1rem;
   margin-bottom: 0.8rem;
   border-radius: 12px;
@@ -449,10 +427,10 @@ form textarea {
   max-width: 200px;
   display: inline-block;
   padding: 20px 22px;
-  color: #fff;
-  background: #4acfee;
+  color: var(--text-color);
+  background: var(--main-color);
   border-radius: 30px;
-  font-size: 15px;
+  font-size: 1rem;
   font-weight: 500;
   transition: all .50s ease;
 }
@@ -467,6 +445,6 @@ form textarea {
   padding: 20px 13%;
   background: var(--main-color);
   text-align: center;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
 }
